--- a/main/templates/suscripcion_publicacionVer.html
+++ b/main/templates/suscripcion_publicacionVer.html
@@ -19,7 +19,7 @@
        </div>
 
        <div class="grid-container"> 
-            <aside class="asideform" data-aos="fade-up">
+            <aside class="asideformmagui" data-aos="fade-up">
                <div class="texto1">
                   <form action ="" method="POST"> {% csrf_token%}
                      Opciones
@@ -31,36 +31,28 @@
             </aside> 
          
 
-           <article class="listadoform" data-aos="fade-up">
+           <article class="listadoformmagui" data-aos="fade-up">
             
-                {% if lista_suscripciones %} 
-                <strong> Suscripciones vigentes al día de la Fecha: </strong>
-                <div class="row" style="align-items: center; ">
-
-                    {% for xObj in lista_suscripciones %}
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretc">
-                        <div class="member" >
-
-                            <div class="texto1">               
-                                  
-                            <h7> 
-                                <span> <strong>Tipo     : {{ xObj.tipo }} </strong> </span>
-                                <span><br>Especie  : {{ xObj.especie }} </span>
-                                <span><br>Localidad: {{ xObj.localidad }} </span>
-                                <span><br>Fecha Desde: {{ xObj.fecha_desde}} </span>
-                                <span><br>Fecha Hasta: {{ xObj.fecha_hasta }} </span>
-                            </h7>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-
-                    {%else%}
-                          <h4>Usted NO está SUSCRIPTO a publicaciones</h4>
-                          <p>Disculpe las molestias.</p>
-    
-                </div>
-                {%endif%}
+            {% if lista_suscripciones %}
+                {% for xObj in lista_suscripciones %}
+                <tr>
+                    <td> {{ xObj.tipo }}</td>
+                    <td> {{ xObj.especie }} </td>   
+                    <td> {{ xObj.localidad }}</td>  
+                    <td> {{ xObj.fecha_desde}}</td>  
+                    <td> {{ xObj.fecha_hasta }}</td> 
+                    <td>
+                        <!-- <a class="btn btn-primary" href="{% url '' xIbj.id %}">Eliminar</a>
+                       <a class="btn btn-primary" href="{% url 'suscripciones_mod' xObj.id %}">Editar</a> -->
+                
+                    </td>
+                </tr>
+                {% endfor %}
+                          
+            {%else%}
+                <h4>Usted NO está SUSCRIPTO a publicaciones</h4>
+                <p>Disculpe las molestias.</p>
+            {%endif%}
            </article>
 
          </div>
