--- a/main/templates/suscripcion_publicaciones.html
+++ b/main/templates/suscripcion_publicaciones.html
@@ -15,12 +15,12 @@
        <div class="container-fluid" data-aos="fade-up">
            <header2 class="section-title">
                <h2>Suscripciones a Publicaciones</h2>
-               <p>Para recibir novedades de las últimas publicaciones de mascotas Perdias, Encontradas y/o en Adopción, Suscríbete!</p>
+               <p>Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!</p>
            </header2>
        </div>
 
        <div class="grid-container"> 
-            <aside class="asideform" data-aos="fade-up">
+            <aside class="asideformmagui" data-aos="fade-up">
                <div class="texto1">
                   <form action ="" method="POST"> {% csrf_token%}
                      Opciones
@@ -33,7 +33,7 @@
             </aside> 
          
 
-           <article class="listadoform" data-aos="fade-up">
+           <article class="listadoformmagui" data-aos="fade-up">
                <div class="texto1">
                   <strong> Para suscribirte completar los siguientes datos: </strong>
                   <form action ="" method="POST" class="p-3 form abs-center"> {% csrf_token%}
