problemas von reverse

--- a/main/templates/barra_opciones.html
+++ b/main/templates/barra_opciones.html
@@ -17,10 +17,10 @@
      <Body>
 
         <ul id="barra">
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones' %}">Suscribirse</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscrip:suscripciones' %}">Suscribirse</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="">Modificar</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="">Cancelar</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones_ver'%}">Ver</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscrip:suscripciones_ver'%}">Ver</a></li>
         </ul>
 
     </Body>
