--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -74,7 +74,7 @@
             {% endif %}
 
             {% if user.is_authenticated %}
-            <li><a class="nav-link scrollto" href="{% url 'suscrip:suscripciones_ver'%}">Suscripciones</a></li>              
+            <li><a class="nav-link scrollto" href="{% url 'suscripciones_ver' 0 %}">Suscripciones</a></li>              
             {% endif %}
 
             <li class="dropdown"><a href="#"><span> Nosotros</span> <i class="bi bi-chevron-down"></i></a>
