--- a/main/templates/suscripcion_publicaciones.html
+++ b/main/templates/suscripcion_publicaciones.html
@@ -1,26 +1,23 @@
 {% extends 'base.html' %}
 
+{% block title %} | Suscripciones {% endblock %}
+
 {% block content %}
+<br>
+   <body  style="background-color:#faeded; padding: 60px 0;"></body>
+   <div class="row" data-aos="fade-up" >
+   <div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
+         <h2 class="text-center">
+             Suscripciones a Publicaciones aaaaa
+         </h2>
+         <h6 class="text-center">
+         Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!
+         </h6>
+     </div>
+   </div>
 
-
-<head>
-   {# el título aparece en la Barra de Título del Navegador #}
-   {% block title %}
-      Suscripciones-Suscribirse
-   {% endblock %}
-</head>
-
-<body  style="background-color:#faeded; padding: 60px 0;">
-   <section >
-       <div class="container-fluid" data-aos="fade-up">
-           <header2 class="section-title">
-               <h2>Suscripciones a Publicaciones</h2>
-               <p>Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!</p>
-           </header2>
-       </div>
-
-       <div class="grid-container"> 
-            <aside class="asideformmagui" data-aos="fade-up">
+       <div class="grid-container" data-aos="fade-up"> 
+            <aside class="asideformmagui">
                <div class="texto1">
                   <form action ="" method="POST"> {% csrf_token%}
                      Opciones
@@ -33,7 +30,7 @@
             </aside> 
          
 
-           <article class="listadoformmagui" data-aos="fade-up">
+           <article class="listadoformmagui" >
                <div class="texto1">
                   <strong> Para suscribirte completar los siguientes datos: </strong>
                   <form action ="" method="POST" class="p-3 form abs-center"> {% csrf_token%}
@@ -44,7 +41,7 @@
                      </table>
 
                      <div style="display: flex; justify-content: center; gap: 3px">
-                        <button type="submit" class="btn get-started-btn">Enviar</button>
+                        <button type="submit" class="btn get-started-btn">Guardar</button>
                      </div>
                   
                   </form>
@@ -53,7 +50,7 @@
 
          </div>
 
-   </section>
+</section>
 
 {% endblock %}
 
