Suscripciones a-b-m-c. CSS. Readme.pdf

--- a/main/templates/suscripcion_publicacionCan.html
+++ b/main/templates/suscripcion_publicacionCan.html
@@ -8,13 +8,15 @@
       <div class="row" data-aos="fade-up" >
       <div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
             <h2 class="text-center">
-                Suscripciones a Publicaciones - Cancelar
+                Suscripciones a Publicaciones
             </h2>
             <h6 class="text-center">
             Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!
             </h6>
         </div>
       </div>
+      
+      <br>
 
        <div class="grid-container" data-aos="fade-up"> 
             <aside class="asideformmagui" data-aos="fade-up">
@@ -47,7 +49,11 @@
            </article>
 
          </div>
-
+         <br>
+         <br>
+         <br>
+         <br>
+         
    </section>
 
 {% endblock %}
