--- a/main/templates/suscripcion_publicaciones.html
+++ b/main/templates/suscripcion_publicaciones.html
@@ -1,14 +1,12 @@
 {% extends 'base.html' %}
-
 {% block title %} | Suscripciones {% endblock %}
-
 {% block content %}
 <br>
    <body  style="background-color:#faeded; padding: 60px 0;"></body>
    <div class="row" data-aos="fade-up" >
    <div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
          <h2 class="text-center">
-             Suscripciones a Publicaciones aaaaa
+             Suscripciones a Publicaciones
          </h2>
          <h6 class="text-center">
          Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!
@@ -16,6 +14,8 @@
      </div>
    </div>
 
+   <br>
+   
        <div class="grid-container" data-aos="fade-up"> 
             <aside class="asideformmagui">
                <div class="texto1">
@@ -36,7 +36,7 @@
                   <form action ="" method="POST" class="p-3 form abs-center"> {% csrf_token%}
                      <table>
            
-                        {{ suscrip_per.as_p }}
+                        {{ form.as_p }}
                            
                      </table>
 
@@ -49,6 +49,10 @@
            </article>
 
          </div>
+<br>
+<br>
+<br>
+<br>
 
 </section>
 
