--- a/miembros/templates/mi_perfil/mis_datos.html
+++ b/miembros/templates/mi_perfil/mis_datos.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}  
 {% block title %}{% endblock %}
 {% block content %}
-<div class="main w-100" style="padding-top:40px;">
-    <div class="container w-100 p-5">
+<div class="main w-100" style="padding-top:40px;background-color:#faeded" >
+    <div class="container w-100 p-5" >
         <h1>Mis datos</h1>
         <div class="align-self-center text-center" style="margin-left: auto;margin-right: auto; width:70%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
             <h3>Nombre de usuario</h3>
