--- a/miembros/templates/mi_perfil/mis_datos.html
+++ b/miembros/templates/mi_perfil/mis_datos.html
@@ -15,7 +15,7 @@
             {{ perfil.email }}
             <hr>
             <a class="btn btn-primary" href='/'>Volver</a>
-            <a class="btn btn-primary"type="submit" href="{% url 'editar' %}">Editar datos</a>
+            <a class="btn btn-primary" href="{% url 'editar' %}">Editar datos</a>
             <hr>
         </div>
     </div>
