--- a/apps/adopcion/templates/adopcion_eliminar.html
+++ b/apps/adopcion/templates/adopcion_eliminar.html
@@ -3,8 +3,9 @@
 {% block title %} Adopciones realizadas{% endblock %}
 
 {% block content %}
-<div class="container h-100  p-5">
-    <div class="row justify-content-center h-100 p-5">
+<div style="padding-top:40px;background-color: #faeded">
+<div class="container h-100  p-5" >
+    <div class="row justify-content-center h-100 p-5" >
         <div class="col-sm-6 align-self-center text-center">
             <div class="card shadow">
                 <div class="card-body">           
@@ -19,5 +20,5 @@
         </div>
     </div>
 </div>  
-
+</div>
 {% endblock %}
