--- a/apps/adopcion/templates/historial_adopciones.html
+++ b/apps/adopcion/templates/historial_adopciones.html
@@ -3,11 +3,11 @@
 {% block title %} Adopciones{% endblock %}
 
 {% block content %}
-<div class="main w-100" style="padding-top:40px;">
+<div class="main w-100" style="padding-top:40px;background-color: #faeded">
     <div class="container w-100 p-5">
-        <div class="table-responsive">
-            <h1>Historial de adopciones</h1>
-            <table class="table table-hover">
+        <div class="table-responsive" style="background-color: white;border-radius: 20px; box-shadow: 0 0 5px;">
+            <h1 style="text-align:center">Historial de adopciones</h1>
+            <table class="table table-hover" style="text-align:center">
                 <thead>
                     <tr >
                         <td>Foto</td>
