Cinsultas Ad, menu ppal, link, otros

--- a/main/templates/barra_opciones.html
+++ b/main/templates/barra_opciones.html
@@ -17,7 +17,7 @@
      <Body>
 
         <ul id="barra">
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones' %}">Suscribir</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones' 0 %}">Suscribir</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones_ver' 1 %}">Editar-Eliminar</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'suscripciones_ver' 0 %}">Ver</a></li>
         </ul>
