--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -59,7 +59,7 @@
               <ul>
                 <li><a href="{% url 'perdidos:buscar_perdidos' %}">Perdidos</a></li>
                 <li><a href="{% url 'encontrados:buscar' %}">Encontrados</a></li>
-                <li><a href="{% url 'adopcion:inicio' %}">Adopciones</a></li>
+                <li><a href="{% url 'adopcion:buscar_a' %}">Adopciones</a></li>
               </ul>
             </li>
 
