--- a/apps/adopcion/templates/index_adopcion.html
+++ b/apps/adopcion/templates/index_adopcion.html
@@ -3,19 +3,19 @@
 {% block title %} | Encontrados {% endblock %}
 
 {% block content %}
-
 <body  style="background-color:#faeded; padding: 60px 0;"></body>
 <div class="container-fluid" data-aos="fade-up " style="padding: 1.5em;">
    <div class="row" >
 		<div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
 			<h2 class="text-center" >
-				Consulta Encontrados
+				Consulta Adopción
 			</h2>
 			<h6 class="text-center">
-				Estas mascotas se encuentran sin dueño, si las conoces, por favor avisá al dueño.
+				Estas mascotas se dan en adopción responsable, para buscarlas, contactá al dueño.
 			</h6>
 		</div>
    </div>
+
 <section style="padding: 1em 2em; background-color:#faeded;">
    <div class="row">
       <div class="col-md-2">
@@ -73,15 +73,12 @@
                                  <span><br>Barrio: {{ publicacion.id_ubicacion.barrio }}</span>
                               </div>
                               <div class="text" style="font-size: 12px;">
-                                 <span>Fecha Publ.: {{publicacion.fecha_publicacion}}</span>
+                                <span>Fecha Publ.: {{publicacion.fecha_publicacion}}</span>
                                  <span><br>Fecha Hasta: {{publicacion.valido_hasta}}</span>
-                                 <span><br>Lo cuida: {{publicacion.cuida}}</span>
+                                 <span>Condición: {{publicacion.condicion}}</span>
                               </div>
                            <div style="display: flex; gap: 0.5em; font-size: 12px;" >
                               <a href="#">Ver</a>
-                              {% comment %}
-                                 <!--<a href="{% url 'adopcion:ver' i.id %}">Ver</a> -->
-                               {% endcomment %}
                            </div>
                         </div>
                      </div>	 
