--- a/miembros/templates/registration/login.html
+++ b/miembros/templates/registration/login.html
@@ -16,7 +16,7 @@
             <div class="signin-content" style="padding-top: 1em;padding-bottom: 1em;">
                 <div class="signin-image ">
                     <figure class="d-none d-md-block"><img src="{% static 'img/logo.png' %}" class="logo" alt=""></figure>
-                    <a href="{% url 'register' %}" class="signup-image-link">Registrarse</a>
+                   
                 </div>
 
                 <div class="signin-form ">
@@ -39,8 +39,17 @@
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                                <br>
+                                <br>
+                                <br>
+
+                            <a style="font-size: medium;" href="{% url 'register' %}">Registrarse</a>
                         </div>
                     </form>
+                    <br>
+                    <br>
+                    
+                    
                 </div>
             </div>
         </div>
