cierre etiqueta endcomment en index_pedidos

--- a/apps/perdidos/templates/index_perdidos.html
+++ b/apps/perdidos/templates/index_perdidos.html
@@ -84,6 +84,7 @@
                               <!--{% if request.user.id == publicacion.id_usuario.id %}
                                  <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}">Editar</a>
                               {% endif %}     -->
+                              {% endcomment %}
                            </div>
                         </div>
                      </div>	 
