--- a/apps/perdidos/templates/index_perdidos.html
+++ b/apps/perdidos/templates/index_perdidos.html
@@ -22,7 +22,7 @@
       <div class="col-md-2">
          <div style="display: flex; justify-content: space-between; padding-bottom: 1.5em; width: 100%;">
             <!--a href="{% url 'encontrados:publicar' %}" class="get-started-btn scrollto" style="margin-left: 1em;">Publicar nuevo</a-->
-            <form action="{% url 'perdidos:buscar' %}" method="GET" role= "form" style="padding-right: 1em; display: flex-column;  " >
+            <form action="{% url 'perdidos:buscar_p' %}" method="GET" role= "form" style="padding-right: 1em; display: flex-column;  " >
                
                <!--{{search_form.as_p}}-->
                <div class="form-group" style="padding: 1em 1em 0 1em;">
@@ -80,10 +80,6 @@
                               </div>
                            <div style="display: flex; gap: 0.5em; font-size: 12px;" >
                               <a href="{% url 'perdidos:publicacion' publicacion.id %}">Ver</a>
-                              {% comment %}
-                              <!--{% if request.user.id == publicacion.id_usuario.id %}
-                                 <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}">Editar</a>
-                              {% endif %}     -->
                            </div>
                         </div>
                      </div>	 
