--- a/apps/perdidos/templates/lista_perdidos.html
+++ b/apps/perdidos/templates/lista_perdidos.html
@@ -21,8 +21,8 @@
 <br>
 <h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Perdidos</h5>
 <div style="text-align: center; background-color: #1b1b1b; color: #fff;">
-   ¡Ac&aacute; pued&eacute;s ver tus publicaciones de avistamientos!
-   <a href="{% url 'perdidos:publicar' %}" class="btn get-started-btn boton-publicar" style="margin: 1em 0; margin-left: 50px;">Publicar avistamiento</a>
+   ¡Ac&aacute; pued&eacute;s publicaciones datos de tu mascota perdida!
+   <a href="{% url 'perdidos:publicar' %}" class="btn get-started-btn boton-publicar" style="margin: 1em 0; margin-left: 50px;">Publicar</a>
 </div>
 <div style="padding: 2em 1em; display: flex; background-color: #faeded;">
    {% if publicaciones %}
