--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -97,7 +97,7 @@
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>¿Perdiste?</h3>
               <div class="btn-wrap">  
-                <a href="#" class="btn-buy">Postear</a>
+                <a href="{% url 'perdidos:lista_perdidos' %}" class="btn-buy">Postear</a>
               </div>
             </div>
           </div>
