--- a/apps/perdidos/templates/publicacion_p.html
+++ b/apps/perdidos/templates/publicacion_p.html
@@ -8,7 +8,7 @@
 <br>
 <br>
 <div style="display: flex; justify-content: center; align-items: center; background-color: #1b1b1b; color: #fff; min-height: 100px;">
-   <p style="font-size: xx-large;">{{ publicacion.id_mascota.nombre }}</p>
+   <p style="font-size: xx-large;">Perdido: {{ publicacion.id_mascota.nombre }}</p>
 </div>
 <section style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 3em 0; background-color: #faeded;">
    <article style="width: 60%; padding: 35px 30px; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
@@ -45,10 +45,10 @@
    {% if user.is_authenticated %}
    <div style="margin-top: 1em;">
       {% if fecha_actual > publicacion.valido_hasta %}
-      <a href="{% url 'encontrados:renovar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
+      <a href="{% url 'perdidos:renovar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
       {% endif %}
-      <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
-      <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
+      <a href="{% url 'perdidos:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
+      <a href="{% url 'perdidos:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
    </div>
    {% endif %}
 </section>
