--- a/apps/perdidos/templates/publicar_p.html
+++ b/apps/perdidos/templates/publicar_p.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %} | Publicar {% endblock %}
+{% block title %} | Publicar Perdidos {% endblock %}
 
 {% block content %}
 <br>
 <br>
 <br>
 <br>
-<h5 style="text-align: left; font: 900 32px bold;padding: 0.5em 0; padding-left: 2em; background-color: #1b1b1b; color: #fff; margin: 0;">Publicar</h5>
+
+<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Publicar Perdidos</h5>
 <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
-   ¡Nosotros te ayudamos a encontrar a su familia!
+   ¡Nosotros te ayudamos a encontrar a tu mascota!
 </div>
 <section style="background-color: #faeded; padding: 60px 0;">
       <div class="container" style="width: 50%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
