--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -57,8 +57,8 @@
     
             <li class="dropdown"><a href="#"><span> Consultas </span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="{% url 'perdidos:buscar' %}">Perdidos</a></li>
-                <li><a href="{% url 'encontrados:buscar' %}">Encontrados</a></li>
+                <li><a href="{% url 'perdidos:buscar_p' %}">Perdidos</a></li>
+                <li><a href="{% url 'encontrados:buscar_e' %}">Encontrados</a></li>
                 <li><a href="{% url 'adopcion:buscar_a' %}">Adopciones</a></li>
               </ul>
             </li>
