--- a/apps/encontrados/templates/editar_publicacion_e.html
+++ b/apps/encontrados/templates/editar_publicacion_e.html
@@ -9,7 +9,8 @@
 <br>
 <br>
 <br>
-<h5 style="text-align: left; font: 900 32px bold;padding: 0.5em 0; padding-left: 2em; background-color: #1b1b1b; color: #fff; margin: 0;">Editar publicación</h5>
+
+<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Editar Encontrados</h5>
 <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
    ¡Recurda estar pendiente de tus publicaciones!
 </div>
