--- a/apps/perdidos/templates/editar_publicacion_p.html
+++ b/apps/perdidos/templates/editar_publicacion_p.html
@@ -9,7 +9,7 @@
 <br>
 <br>
 <br>
-<h5 style="text-align: left; font: 900 32px bold;padding: 0.5em 0; padding-left: 2em; background-color: #1b1b1b; color: #fff; margin: 0;">Editar publicación</h5>
+<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Editar Perdidos</h5>
 <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
    ¡Recurda estar pendiente de tus publicaciones!
 </div>
@@ -20,9 +20,9 @@
             {% csrf_token %}
             {{ mascota.as_p }}
             {{ ubicacion.as_p }}
-            {{ encontro.as_p }}
+            {{ perdido.as_p }}
             <div style="display: flex; justify-content: center; gap: 5px;">
-               <a href="{% url 'encontrados:lista_encontrados' %}" class="btn btn-dark">Cancelar</a>
+               <a href="{% url 'perdidos:lista_perdidos' %}" class="btn btn-dark">Cancelar</a>
                <button type="submit" class="btn get-started-btn">Guardar</button>
             </div>
          </form>
