--- a/apps/perdidos/templates/publicacion_p.html
+++ b/apps/perdidos/templates/publicacion_p.html
@@ -11,6 +11,9 @@
    <p style="font-size: xx-large;">Perdido: {{ publicacion.id_mascota.nombre }}</p>
 </div>
 <section style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 3em 0; background-color: #faeded;">
+   {% if user.is_authenticated  and user == publicacion.id_usuario %}
+   <span style="padding-bottom: 10px;">Tu publicación vence el <strong>{{ publicacion.valido_hasta }}</strong>, recuerda renovalrla</span>
+   {% endif %}
    <article style="width: 60%; padding: 35px 30px; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
       <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
          <span style="padding-bottom: 1em;">Localidad: {{ publicacion.id_ubicacion.localidad }}</span>
@@ -42,7 +45,7 @@
       <p style="text-align: center; font-size: 20px;">Referencias</p>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_ubicacion.otros_datos }}</p>
    </article>
-   {% if user.is_authenticated %}
+   {% if user.is_authenticated and user == publicacion.id_usuario %}
    <div style="margin-top: 1em;">
       {% if fecha_actual > publicacion.valido_hasta %}
       <a href="{% url 'perdidos:renovar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
