--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -199,6 +199,9 @@
   <!-- Template Main JS File -->
   <script src="{% static 'js/main.js' %}"></script>
 
+  <!-- sweetalert2 JS CDN -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 </body>
 
 </html>
