--- a/apps/encontrados/templates/publicacion_e.html
+++ b/apps/encontrados/templates/publicacion_e.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}{% endblock %}
 
 {% block content %}
@@ -51,8 +53,20 @@
       <a href="{% url 'encontrados:renovar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
       {% endif %}
       <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
-      <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
+      <span class="eliminar_publ" id="{{ publicacion.id }}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></span>
    </div>
    {% endif %}
 </section>
+
+<script src="{% static 'js/alertas.js' %}"></script>
+<script>
+   const borrar = document.querySelector('.eliminar_publ');
+
+   borrar.addEventListener('click', () => {
+         let el = borrar['id'];
+         let url = '/encontrados/borrar/' + el;
+         alertaConfirmar(url);
+      })
+</script>
+</script>
 {% endblock %}
