--- a/apps/encontrados/templates/publicar_e.html
+++ b/apps/encontrados/templates/publicar_e.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %} | Publicar {% endblock %}
 
 {% block content %}
@@ -13,21 +15,29 @@
    ¡Nosotros te ayudamos a encontrar a su familia!
 </div>
 <section style="background-color: #faeded; padding: 60px 0;">
-      <div class="container" style="width: 50%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
-         <div class="abs-center">
-            <form method="POST" class="p-3 form abs-center" enctype="multipart/form-data">
-               <p style="font-size: 12px;">Todos los campos marcados con (*) son obligatorios.</p>
-               {% csrf_token %}
-               {{ mascota.as_p }}
-               {{ ubicacion.as_p }}
-               {{ encontro.as_p }}
-               <div style="display: flex; justify-content: center; gap: 5px">
-                  <a href="{% url 'encontrados:lista_encontrados' %}" class="btn btn-dark">Cancelar</a>
-                  <button type="submit" class="btn get-started-btn">Publicar</button>
-               </div>
-            </form>  
-         </div>
+   <div class="container" style="width: 50%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
+      <div class="abs-center">
+         <form method="POST" class="p-3 form abs-center" enctype="multipart/form-data" id="form">
+            <p style="font-size: 12px;">Todos los campos marcados con (*) son obligatorios.</p>
+            {% csrf_token %}
+            {{ mascota.as_p }}
+            {{ ubicacion.as_p }}
+            {{ encontro.as_p }}
+            <div style="display: flex; justify-content: center; gap: 5px">
+               <a href="{% url 'encontrados:lista_encontrados' %}" class="btn btn-dark">Cancelar</a>
+               <button type="submit" class="btn get-started-btn">Publicar</button>
+            </div>
+         </form>  
       </div>
-   </section>
+   </div>
+</section>
 
+<script src="{% static 'js/alertas.js' %}"></script>
+<script>
+   const publicar = document.getElementById('form')
+
+   publicar.addEventListener('submit', ()=> {
+      alertaExito('Tu publicación se envio con éxito!')
+   })
+</script>
 {% endblock %}
