--- a/apps/adopcion/templates/index_adopcion.html
+++ b/apps/adopcion/templates/index_adopcion.html
@@ -78,7 +78,7 @@
                                  <span>Condición: {{publicacion.condicion}}</span>
                               </div>
                            <div style="display: flex; gap: 0.5em; font-size: 12px;" >
-                              <a href="#">Ver</a>
+                              <a href="{% url 'adopcion:ver' publicacion.id %}">Ver</a>
                            </div>
                         </div>
                      </div>	 
