--- a/miembros/templates/registration/login.html
+++ b/miembros/templates/registration/login.html
@@ -44,6 +44,7 @@
                                 <br>
 
                             <a style="font-size: medium;" href="{% url 'register' %}">Registrarse</a>
+                            <a style="font-size: medium;" href="{% url 'password_reset' %}">Olvide mi contraseña</a>
                         </div>
                     </form>
                     <br>
