--- a/apps/encontrados/templates/correo_notificacion_e.html
+++ b/apps/encontrados/templates/correo_notificacion_e.html
@@ -1,4 +1,4 @@
-<!-- <div style="display: block;">
+{# <!-- <div style="display: block;">
    <div style="text-align: center;">
       <h4 style="font-size: 16px;"><strong>{{ publicacion.id_mascota.especie }}</strong></h4>
    </div>
@@ -9,6 +9,6 @@
       <span>{{ publicacion.id_ubicacion.localidad }}</span> -
       <span>{{ publicacion.id_ubicacion.barrio }}</span>
    </div>
-</div> -->
-         
+</div> --> #}
+
 <p>Acaban de encontrar un {{publicacion.id_mascota.especie}} {{publicacion.id_mascota.tamaño}} de raza {{publicacion.id_mascota.raza}} en el barrio {{publicacion.id_ubicacion.barrio}} de {{publicacion.id_ubicacion.localidad}}, <a href="localhost/encontrados/publicacion/{{publicacion.id}}">ve a ver</a></p>
