--- a/miembros/templates/mi_perfil/editar_datos.html
+++ b/miembros/templates/mi_perfil/editar_datos.html
@@ -13,7 +13,7 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <hr>
-                <button type="submit" class="btn get-started-btn">Guardar</button><a style="font-size: medium;padding-left: 20px;" href="{% url 'password_change' %}">Cambiar contraseña</a>
+                <button type="submit" class="btn get-started-btn">Guardar</button><a style="font-size: medium;padding-left: 20px;" href="{% url 'password_change0' %}">Cambiar contraseña</a>
                 <hr>
             </form>                
             
