correccion total estilos editar y recuperar contraseña

--- a/miembros/templates/mi_perfil/password_reset_done.html
+++ b/miembros/templates/mi_perfil/password_reset_done.html
@@ -5,7 +5,9 @@
     <div class="container w-100 p-5" >
         <h1>Recuperar contraseña</h1>
         <div class="align-self-center text-center" style="margin-left: auto;margin-right: auto; width:70%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
-            <h3>Te enviamos un enlace para reestablecer tu contraseña</h3>>
+            <br>
+            <h3>Te enviamos un enlace para reestablecer tu contraseña</h3>
+            <br>
         </div>
     </div>
 </div>
