--- a/miembros/templates/mi_perfil/password_change_done.html
+++ b/miembros/templates/mi_perfil/password_change_done.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class='row'>
     <div class="col-12 text-center py-5">
-            <h1 class='my-5 py-5'>Password successfully changed!</h1>
+            <h1 class='my-5 py-5'>Contraseña cambiada correctamente!</h1>
       </div>
 </div>
 {% endblock %}
