correccion estilo botones inicio pagina

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -121,7 +121,7 @@
           </div>
 
          
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-5">
+          <div class="col-lg-6 col-md-6 mt-4 mt-lg-5">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>¿Adoptar?</h3>
               <div class="btn-wrap">
@@ -131,7 +131,7 @@
           </div>
 
          
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-5">
+          <div class="col-lg-6 col-md-6 mt-4 mt-lg-5">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>¡Suscríbete!</h3>
               <div class="btn-wrap">
@@ -141,8 +141,8 @@
           </div>
 
           {%else %}
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-5">
-            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 mt-4 mt-lg-5">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100" style="margin-right:50%;margin-left: 50%;width: 100%;">
               <h3>¡Regístrate!</h3>
               <div class="btn-wrap">
                 <a href="{% url 'login' %}" class="btn-buy">Registrar</a>
