ajustes de margen para ajustar el header

--- a/static/app/css/publications_detail.css
+++ b/static/app/css/publications_detail.css
@@ -3,6 +3,7 @@ body {
     background-color: #faeded;
 }
 .section-1 {
+    margin-top: 82px;
     text-align: center;
     padding: 1.5em 0;
     background-color: #1b1b1b;
