--- a/static/index/css/index.css
+++ b/static/index/css/index.css
@@ -1,4 +1,5 @@
 .section-1 {
+    margin-top: 82px;
     width: 100%;
     height: calc(100vh - 82px);
     background: url(../img/hero-bg.jpg) top center no-repeat;
